--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@puzzle-js/client-lib",
   "main": "dist/index.js",
-  "version": "1.8.0",
+  "version": "1.8.1",
   "author": "<emre.kul@trendyol.com>",
   "license": "MIT",
   "repository": {
@@ -19,19 +19,19 @@
     "@types/chai": "^4.1.7",
     "@types/faker": "^4.1.5",
     "@types/gun": "^0.9.2",
-    "@types/jest": "^24.0.13",
+    "@types/jest": "^25.2.3",
     "@types/jsdom": "^12.2.3",
     "@types/sinon": "^7.0.11",
     "chai": "^4.2.0",
     "faker": "^4.1.0",
-    "jest": "^24.8.0",
+    "jest": "^25.5.4",
     "jsdom": "^15.0.0",
     "sinon": "^7.3.2",
-    "ts-jest": "^24.0.2",
+    "ts-jest": "^25.5.1",
     "ts-loader": "^5.4.5",
     "tslint": "^5.16.0",
     "typescript": "^3.4.5",
-    "webpack": "^4.30.0",
-    "webpack-cli": "^3.3.4"
+    "webpack": "5.88.2",
+    "webpack-cli": "5.1.4"
   }
 }
